Removed !important tags

--- a/webapp/src/main/webapp/themes/nemo/css/theme.css
+++ b/webapp/src/main/webapp/themes/nemo/css/theme.css
@@ -273,8 +273,8 @@ These are helper classes to add margin gaps where needed
 /* TOOLTIP  ---------------------------------------->  */
 /* ------------------------------------------------->  */
 .vivoTooltip {
-  opacity: 1 !important;
-  --bs-tooltip-max-width: 400px !important;
+  opacity: 1;
+  max-width: 400px;
 }
 
 .vivoTooltip > .tooltip-inner {
@@ -310,12 +310,14 @@ These are helper classes to add margin gaps where needed
   color: unset;
 }
 
-.downloadTip {
-  --bs-tooltip-max-width: 600px !important;
+div.vivoTooltip.downloadTip {
+  max-width: 600px;
+  --bs-tooltip-max-width: 600px;
 }
 
-.vivoTooltip-yellow {
-  --bs-tooltip-max-width: 500px !important;
+div.vivoTooltip.vivoTooltip-yellow {
+  max-width: 500px;
+  --bs-tooltip-max-width: 500px;
 }
 
 .vivoTooltip-yellow > .tooltip-inner {
