--- a/webapp/src/main/webapp/themes/nemo/css/theme.css
+++ b/webapp/src/main/webapp/themes/nemo/css/theme.css
@@ -272,12 +272,12 @@ These are helper classes to add margin gaps where needed
 /* ------------------------------------------------->  */
 /* TOOLTIP  ---------------------------------------->  */
 /* ------------------------------------------------->  */
-.vivoTooltip {
+/* .vivoTooltip {
   opacity: 1;
   max-width: 400px;
 }
 
-.vivoTooltip > .tooltip-inner {
+.vivoTooltip>.tooltip-inner {
   background-color: #f1f2ee;
   border: 1px solid #F1D031;
   text-align: left;
@@ -286,27 +286,28 @@ These are helper classes to add margin gaps where needed
   max-width: initial;
 }
 
-.vivoTooltip > .tooltip-inner #uriLink {
+.vivoTooltip>.tooltip-inner #uriLink {
   width: 350px;
 }
 
-.vivoTooltip > .tooltip-inner .close-footer {
+.vivoTooltip>.tooltip-inner .close-footer {
   display: flex;
 }
 
-.vivoTooltip > .tooltip-inner .close-footer a.close {
+.vivoTooltip>.tooltip-inner .close-footer a.close {
   margin-left: auto;
 }
 
-.vivoTooltip > .tooltip-inner h5 {
+.vivoTooltip>.tooltip-inner h5 {
   padding-bottom: 0;
 }
 
-.vivoTooltip > .tooltip-arrow::before {
+.vivoTooltip>.tooltip-arrow::before {
   --bs-tooltip-bg: #F1D031;
 }
 
-.tooltip:not(.vivoTooltip) > .tooltip-inner, .tooltip:not(.vivoTooltip) > .tooltip-inner * {
+.tooltip:not(.vivoTooltip)>.tooltip-inner,
+.tooltip:not(.vivoTooltip)>.tooltip-inner * {
   color: unset;
 }
 
@@ -320,13 +321,13 @@ div.vivoTooltip.vivoTooltip-yellow {
   --bs-tooltip-max-width: 500px;
 }
 
-.vivoTooltip-yellow > .tooltip-inner {
+.vivoTooltip-yellow>.tooltip-inner {
   background-color: #ffffc0;
   font-size: 0.8em;
   padding: 20px 22px;
   text-align: left;
   line-height: 12px;
-} 
+} */
 
 
 /*  */
