--- a/webapp/src/main/webapp/css/visualization/capabilitymap/graph.css
+++ b/webapp/src/main/webapp/css/visualization/capabilitymap/graph.css
@@ -23,7 +23,7 @@ body {
     -webkit-text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.3);
     -moz-text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.3);
     -o-text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.3);
-    background-color: #8BAB2E;
+    background-color: var(--accent-color, #8BAB2E);
 //    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#446791), to(#164682));
 //    background-image: -moz-linear-gradient(top, #446791, #164682);
     width: auto;
