--- a/webapp/src/main/webapp/themes/wilma/css/reset.css
+++ b/webapp/src/main/webapp/themes/wilma/css/reset.css
@@ -56,7 +56,7 @@ td {
     font-size: 100%;
     font-family: inherit;
     vertical-align: baseline;
-    color: #595b5b;
+    color: var(--text-color, #595b5b);
     font-weight: normal;
 }
 body {
