--- a/webapp/src/main/webapp/themes/tenderfoot/css/page-browse.css
+++ b/webapp/src/main/webapp/themes/tenderfoot/css/page-browse.css
@@ -12,7 +12,7 @@ ul#vgraph-classes li {
 ul#browse-classes a:hover,
 ul#browse-classes a.selected {
     background: url(../images/arrow.gif) 4px 5px no-repeat;
-    color: #2ea0cf;
+    color: var(--primary-color, #2ea0cf);
 }
 ul#browse-classes .count-classes {
     font-size: 12px;
@@ -27,7 +27,7 @@ ul#alpha-browse-individuals {
 ul#alpha-browse-individuals a:hover,
 ul#alpha-browse-individuals a.selected {
     background: url(../images/arrowSmall.gif) -3px 7px no-repeat;
-    color: #2ea0cf;
+    color: var(--primary-color, #2ea0cf);
 }
 ul#alpha-browse-individuals .count-classes,
 ul#vgraph-classes .count-classes {
@@ -60,11 +60,11 @@ nav#alpha-browse-container {
 #individuals-in-class li h1,
 #property-group-menu ul,
 article.property ul.property-list {
-    color: #5e6363;
+    color: var(--text-color, #5e6363);
     font-size: 1em;
 }
 .pagination.menupage li a:hover {
-    background: #5e6363;
+    background: var(--text-color, #5e6363);
 }
 .pagination>li {
     display: inline-block;
