--- a/webapp/src/main/webapp/themes/tenderfoot/css/page-home.css
+++ b/webapp/src/main/webapp/themes/tenderfoot/css/page-home.css
@@ -30,8 +30,8 @@
     border-top: 1px solid rgba(220,228,227,.42); /* stroke */
     border-bottom: 1px solid rgba(220,228,227,.42); /* stroke */
     /* background-color: #395d7f; /* layer fill content */
-    background-color: #338caf;
-    border-bottom: 2px solid #62b6d7;
+    background-color: var(--primary-color-darker, #395d7f);;
+    border-bottom: 2px solid var(--primary-color, #62b6d7);
     color: #fff;
 }
 #home-stats {
