--- a/webapp/src/main/webapp/themes/tenderfoot/css/reset.css
+++ b/webapp/src/main/webapp/themes/tenderfoot/css/reset.css
@@ -56,7 +56,7 @@ td {
     font-size: 100%;
     font-family: "Noto Sans", "Lucida Sans Unicode","Lucida Grande", Geneva, helvetica, sans-serif;
     vertical-align: baseline;
-    color: #595b5b;
+    color: var(--text-color, #595B5B);
     font-weight: normal;
 }
 body {
